--- a/.github/workflows/00_build.yaml
+++ b/.github/workflows/00_build.yaml
@@ -49,6 +49,14 @@ jobs:
   mac:
     name: Build LMS for Mac (MenuBar Item)
     runs-on: macos-13
+    env:
+      BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+      P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+      KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+      DEV_CERT_NAME: ${{ secrets.DEV_CERT_NAME }}
+      APPLE_ID: ${{ secrets.APPLE_ID }}
+      NOTARIZATION_PW: ${{ secrets.NOTARIZATION_PW }}
+      TEAM_ID: ${{ secrets.TEAM_ID }}
     steps:
       # we must check out here, as  otherwise the build action is not available
       - name: Check out LMS code
@@ -56,6 +64,25 @@ jobs:
         with:
           path: server
           ref: ${{ inputs.branch }}
+
+      - name: Install the Apple certificate and provisioning profile
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
 
       - name: Launch build process
         uses: ./server/.github/actions/build
@@ -175,7 +202,7 @@ jobs:
 
   updateRepoFile:
     name: Trigger repository file update
-    if: ${{ success() && inputs.build_type == 'nightly' }}
+    if: ${{ success() && inputs.build_type == 'nightly' && github.repository_owner == 'LMS-Community' }}
     runs-on: ubuntu-latest
     timeout-minutes: 2
     needs:
