Don't publish Docker release builds as "latest" immediately, but tag them "rc". Once we want to really go live, add "latest" tag.

--- a/.github/workflows/00_build.yaml
+++ b/.github/workflows/00_build.yaml
@@ -9,7 +9,7 @@ on:
         type: string
         description: 'The branch from which to build from'
         required: true
-        # TODO - make this dynamic
+        # TODO - make this dynamic, or something like https://dev.to/mrmike/github-action-handling-input-default-value-5f2g?
         default: public/9.0
       build_type:
         type: choice
