Fix triggering nightly builds.
We must define the workflow inputs, not only the reference. The latter is only used to tell where to use the workflow from, but not what branch to build from.

--- a/.github/workflows/00_cron.yaml
+++ b/.github/workflows/00_cron.yaml
@@ -68,6 +68,10 @@ jobs:
                   repo: context.repo.repo,
                   workflow_id: '00_build.yaml',
                   ref: 'public/' + candidates[i].v,
+                  inputs: {
+                    branch: 'public/' + candidates[i].v,
+                    build_type: 'nightly',
+                  },
                 });
 
                 if (workflowStatus.status < 200 || workflowStatus.status > 204) {
