--- a/.github/workflows/00_cron.yaml
+++ b/.github/workflows/00_cron.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/github-script@v7
         with:
           script: |
-            const repoStatus = await github.request('GET https://lms-community.github.io/lms-server-repository/servers.json');
+            const repoStatus = await github.request('GET https://raw.githubusercontent.com/LMS-Community/lms-server-repository/refs/heads/master/servers.json');
 
             if (repoStatus.status !== 200) {
               return false;
