Add more logging to the cron job. The raw GH download isn't parsed to JSON automatically (lack of content type headers?).

--- a/.github/workflows/00_cron.yaml
+++ b/.github/workflows/00_cron.yaml
@@ -16,15 +16,18 @@ jobs:
             const repoStatus = await github.request('GET https://raw.githubusercontent.com/LMS-Community/lms-server-repository/refs/heads/master/servers.json');
 
             if (repoStatus.status !== 200) {
+              console.error("Fetching repo file failed?" + JSON.stringify(repoStatus, null, 2));
               return false;
             }
 
             // get the oldest timestamp for each version from previous builds
             const candidates = [];
-            Object.keys(repoStatus.data).forEach(version => {
+            const repoData = JSON.parse(repoStatus.data);
+
+            Object.keys(repoData).forEach(version => {
               const matches = version.match(/(\d+\.\d+)\.\d+/);
               if (matches && matches.length == 2) {
-                const versionBuilds = repoStatus.data[version];
+                const versionBuilds = repoData[version];
                 candidates.push({
                   v: matches[1],
                   r: Object.keys(versionBuilds).reduce((accumulator, build) => {
@@ -35,7 +38,7 @@ jobs:
                 })
               }
               else {
-                delete repoStatus.data[version];
+                delete repoData[version];
               }
             });
 
